--- a/css/scss/base/_type.scss
+++ b/css/scss/base/_type.scss
@@ -129,21 +129,21 @@ a {
 }
 
 
-pre {
-  background: #222;
-  color: #fff;
-  display: block;
-  font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
-  font-size: 13px;
-  line-height: 20px;
-  margin: 0 0 $padding/2;
-  padding: 10px;
-  border-radius: $br;
-  word-break: break-all;
-  word-wrap: break-word;
-}
+//pre {
+ // background: #222;
+ // color: #fff;
+ // display: block;
+ // font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
+ // font-size: 13px;
+ // line-height: 20px;
+ // margin: 0 0 $padding/2;
+ // padding: 10px;
+ // border-radius: $br;
+ // word-break: break-all;
+ // word-wrap: break-word;
+//}
 
-code {
+pre {
   @include border-radius(5px);
   background: #f5f5f5;
   border: 1px solid rgba(0, 0, 0, .1);
